force-app/main/default/objects/GfAmsPurchaseOrder__c/GfAmsPurchaseOrder__c.object-meta.xml
<CustomObject>
    <label>발주Old</label>
    <nameField>
        <displayFormat>PO{YYYYMMDD}{00000}</displayFormat>
        <label>Purchase No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>