force-app/main/default/objects/GfAmsPurchaseOrder__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>대리점</description>
    <label>Agency</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipName>Purchase_Order</relationshipName>
    <type>Lookup</type>
</CustomField>