force-app/main/default/objects/GfAmsPurchaseOrder__c/fields/AmountOk__c.field-meta.xml
<CustomField>
    <fullName>AmountOk__c</fullName>
    <description>발주 확정금액 + 발주 확정세액</description>
    <formula>NetAmountOK__c	+ TaxAmountOK__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Ok</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>