force-app/main/default/objects/GfAmsPurchaseOrder__c/fields/NetAmount__c.field-meta.xml
<CustomField>
    <fullName>NetAmount__c</fullName>
    <description>발주 금액 합계</description>
    <label>Net Amount</label>
    <summarizedField>GfAmsPurchaseOrderItem__c.NetAmount__c</summarizedField>
    <summaryForeignKey>GfAmsPurchaseOrderItem__c.PurchaseOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>