force-app/main/default/objects/GfAmsPurchaseOrder__c/fields/NetAmountOK__c.field-meta.xml
<CustomField>
    <fullName>NetAmountOK__c</fullName>
    <description>발주 확정 금액 합계</description>
    <label>Net Amount OK</label>
    <summarizedField>GfAmsPurchaseOrderItem__c.NetAmountOK__c</summarizedField>
    <summaryForeignKey>GfAmsPurchaseOrderItem__c.PurchaseOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>