force-app/main/default/objects/GfAmsPurchaseOrder__c/fields/RegisterHP__c.field-meta.xml
<CustomField>
    <fullName>RegisterHP__c</fullName>
    <description>등록자 연락처</description>
    <label>Register HP</label>
    <type>Phone</type>
</CustomField>