force-app/main/default/objects/GfAmsPurchaseOrder__c/fields/Registor__c.field-meta.xml
<CustomField>
    <fullName>Registor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>발주 등록자</description>
    <label>Registor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Purchase_Order</relationshipName>
    <type>Lookup</type>
</CustomField>