force-app/main/default/objects/GfAmsPurchaseOrder__c/fields/ReleaseStatus__c.field-meta.xml
<CustomField>
    <fullName>ReleaseStatus__c</fullName>
    <description>출고 상태</description>
    <label>Release Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NotRelease</fullName>
                <default>true</default>
                <label>미출고</label>
            </value>
            <value>
                <fullName>Released</fullName>
                <label>출고</label>
            </value>
            <value>
                <fullName>PartialReleased</fullName>
                <label>부분출고</label>
            </value>
            <value>
                <fullName>CancelReleased</fullName>
                <label>출고취소</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>