force-app/main/default/objects/GfAmsPurchaseOrder__c/fields/RequestDate__c.field-meta.xml
<CustomField>
    <fullName>RequestDate__c</fullName>
    <description>납품 요청일</description>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>