force-app/main/default/objects/GfAmsPurchaseOrder__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>현재 상태</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registration</fullName>
                <label>등록</label>
            </value>
            <value>
                <fullName>Determined</fullName>
                <label>확정</label>
            </value>
            <value>
                <fullName>Cancellation</fullName>
                <label>취소</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>