force-app/main/default/objects/GfAmsPurchaseOrder__c/fields/TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount__c</fullName>
    <description>발주 세액 합계</description>
    <label>Tax Amount</label>
    <summarizedField>GfAmsPurchaseOrderItem__c.TaxAmount__c</summarizedField>
    <summaryForeignKey>GfAmsPurchaseOrderItem__c.PurchaseOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>