force-app/main/default/objects/GfAmsPurchaseOrder__c/fields/TaxAmountOK__c.field-meta.xml
<CustomField>
    <fullName>TaxAmountOK__c</fullName>
    <description>발주 확정 세액 합계</description>
    <label>Tax Amount OK</label>
    <summarizedField>GfAmsPurchaseOrderItem__c.TaxAmountOK__c</summarizedField>
    <summaryForeignKey>GfAmsPurchaseOrderItem__c.PurchaseOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>